@@ -20,10 +20,13 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
+t/lib/Wikibase/Cache/Backend/Bad2.pm
+t/lib/Wikibase/Cache/Backend/Foo.pm
 t/Wikibase-Cache-Backend/01-use.t
 t/Wikibase-Cache-Backend/02-version.t
 t/Wikibase-Cache/01-use.t
 t/Wikibase-Cache/02-version.t
+t/Wikibase-Cache/03-new.t
 xt/Wikibase-Cache-Backend/01-pod_coverage.t
 xt/Wikibase-Cache-Backend/02-pod.t
 xt/Wikibase-Cache/01-pod_coverage.t
