@@ -3,9 +3,13 @@ abstract: 'Wikibase cache.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
+  File::Object: 0
   Test::More: 0
   Test::NoWarnings: 0
+  Wikibase::Cache::Backend::Basic: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
