@@ -26,8 +26,13 @@ requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Wikibase-Cache/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Wikibase-Cache';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Wikibase-Cache';
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
+test_requires 'File::Object' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
+# Default cache object.
+test_requires 'Wikibase::Cache::Backend::Basic' => 0;
 tests_recursive;
 version '0.02';
 
